# center_django

./: .gitignore  Dockerfile  README.md  manage.py  pyproject.toml
center_django/: asgi.py  settings.py  urls.py  uvicorn.py  wsgi.py
link_shortener/: apps.py  mapping.py  models.py  serializers.py  tests.py  urls.py  views.py
link_shortener/migrations/: 0001_initial.py  0002_alter_redirection_hits_alter_redirection_location.py
